.provarCaches/00Df2000001KKNJEA4/objects/IncapTalkBack__Survey_Intake__c.object
<CustomObject>
    <description>Used to store the response of a survey.</description>
    <fields>
        <fullName>IncapTalkBack__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case the survey intake is connected too.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Intakes</relationshipLabel>
        <relationshipName>Survey_Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncapTalkBack__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who filled out the survey</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Intakes</relationshipLabel>
        <relationshipName>Survey_Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncapTalkBack__Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Survey that was taken</description>
        <label>Survey</label>
        <referenceTo>IncapTalkBack__Survey__c</referenceTo>
        <relationshipLabel>Survey Intakes</relationshipLabel>
        <relationshipName>Survey_Intakes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Survey Intake</label>
    <listViews>
        <fullName>IncapTalkBack__All</fullName>
        <columns>NAME</columns>
        <columns>IncapTalkBack__Survey__c</columns>
        <columns>IncapTalkBack__Case__c</columns>
        <columns>IncapTalkBack__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Survey Intake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>